--- a/frontend/src/app/pages/products/components/productlist.template.html
+++ b/frontend/src/app/pages/products/components/productlist.template.html
@@ -1,2 +1,14 @@
 <h2>ProductList</h2>
-<div *ngFor="let product of products">{{product.name}}</div>	
+
+ <md-card *ngFor="let product of products" >
+      <md-card-subtitle>{{product.brand}}</md-card-subtitle>
+      <md-card-title>{{product.name}}</md-card-title>
+      <md-card-content>
+        <p>{{product.description}}</p>
+        
+      </md-card-content>
+      <md-card-actions>
+        <button md-button>Rating: {{product.rating}}</button>
+        <button md-button>Detail</button>
+      </md-card-actions>
+</md-card>
