--- a/frontend/src/app/app.template.html
+++ b/frontend/src/app/app.template.html
@@ -1,17 +1,13 @@
 <header></header>
-
 <section class="hero bg-color-1 padall5 sm-padall2">
   <div class="container">
     <div class="row">
-
       <div class="col-xs-12 col-md-10 col-md-offset-1 well bg-white">
         
+        <router-outlet></router-outlet>
         
-        <productlist></productlist>
-           
-        
-      </div>
     </div>
+  </div>
   </div>
 </section>
 
