fix product detail bugs

--- a/frontend/src/app/pages/products/detail.template.html
+++ b/frontend/src/app/pages/products/detail.template.html
@@ -50,7 +50,7 @@
                     </form>
                   </div>
                   <div [hidden]="!submitted">
-                    <h2>You havee submitted your review:</h2>
+                    <h2>You have submitted your review:</h2>
                     <div class="row">
                       <div class="col-xs-3">Email</div>
                       <div class="col-xs-9  pull-left">{{ model.username }}</div>
